finish redux and table logic

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,8 @@
     "comma-dangle": "off",
     "require-jsdoc": "off",
     "no-debugger": "off",
-    "max-len": "off"
+    "max-len": "off",
+    "arrow-parens": "off"
   },
   "extends": ["eslint:recommended", "google"]
 }
