--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "start": "cross-env NODE_ENV=development webpack-dev-server",
     "build": "cross-env NODE_ENV=production webpack --mode production",
     "lint": "npx eslint ./src"
@@ -30,6 +31,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-loader": "^4.0.2",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.6.1",
     "mini-css-extract-plugin": "^2.7.6",
     "sass": "^1.63.4",
     "sass-loader": "^13.3.2",
@@ -39,6 +41,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "eslint-plugin-jest": "^27.2.3",
     "normalize.css": "^8.0.1"
   }
 }
